# codekeyvn

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/codekey-cli/: Cargo.toml
crates/codekey-cli/src/: main.rs
crates/codekey-engine/: Cargo.toml
crates/codekey-engine/src/: charset.rs  engine.rs  lib.rs  method.rs  syllable.rs  tables.rs  tone.rs  validate.rs
crates/codekey-ffi/: Cargo.toml
crates/codekey-ffi/src/: lib.rs
crates/codekey-ibus/: Cargo.toml
crates/codekey-ibus/src/: address.rs  engine.rs  factory.rs  handler.rs  keysyms.rs  main.rs  types.rs
crates/codekey-tray/: Cargo.toml
crates/codekey-tray/src/: main.rs
data/desktop/: codekey-tray.desktop
data/ibus/: codekey.xml.in
docs/: DISTROS.md  SHARE.md
fcitx5-addon/: CMakeLists.txt
fcitx5-addon/data/: codekey-addon.conf  codekey-vni.conf  codekey.conf
fcitx5-addon/src/: codekey.cpp
include/: codekey.h
packaging/arch/: PKGBUILD
packaging/fedora/: codekey.spec
scripts/: build-deb.sh  enable-codekey.sh  install-fcitx5.sh  install-ibus.sh  package-all.sh  push-github.sh
