[package]
name = "codekey-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CodeKey system tray — toggle Telex/VNI like UniKey"

[[bin]]
name = "codekey-tray"
path = "src/main.rs"

[dependencies]
codekey-engine = { workspace = true }
anyhow = { workspace = true }
ksni = { version = "0.3", features = ["blocking"] }
